--- a/public/login.html
+++ b/public/login.html
@@ -459,10 +459,10 @@
                 </p>
             </div>
             
-            <div class="role-selection">
+            <!-- <div class="role-selection">
                 <div class="role-tab active">Admin</div>
                 <div class="role-tab">Receptionist</div>
-            </div>
+            </div> -->
             
             <form class="login-form">
                 <div class="form-group">
